--- a/public/ttr.html
+++ b/public/ttr.html
@@ -1,1 +1,93 @@
-<h1>TTR</h1>
+<div ng-controller="TTRCntrl">
+  <div id="ttrDiv">
+    <button type="button" class="btn btn-danger ttrButton">Delete</button> <!--ng-click -->
+    <button type="button" class="button btn btn-primary ttrButton" data-toggle="modal" data-target="#ttrAddModal" >Add</button>
+    <table id = "ttrTable" class="table table-striped">
+      <thead>
+        <tr>
+          <th></th>
+          <th scope="col">Description</th>
+          <th scaope ="col">Due Date</th>
+        </tr>
+      </thead>
+      <!--Temporary layout -->
+      <tr>
+        <td>
+          <input type="checkbox" value="ttrCheck">
+        </td>
+        <td data-toggle="modal" data-id="1" data-target="#ttrEditModal">
+          Add a Description Here
+          </td>
+          <td>
+            10/1/2018
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <input type="checkbox" value="ttrCheck">
+          </td>
+          <td data-toggle="modal" data-id="2" data-target="#ttrEditModal">
+            Add a Description Here
+            </td>
+            <td>
+              10/1/2018
+            </td>
+          </tr>
+        <!-- Going to be similar to this for table
+        <tr ng-repeat="things in things">
+          <td><input type="checkbox" value="ttrCheck"></td>
+          <td data-toggle="modal" data-target="#ttrEditModal">{{ things.description }}</td> data id
+          <td>{{ things.dueDate }}</td>
+        </tr>-->
+        </table>
+  <!-- Add Modal -->
+  <div class="modal" id="ttrAddModal" tabindex="-1" role="dialog" aria-labelledby="addTTR" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="addTTR">Add a TTR</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form name = "AddTTR"> <!--Method ... Action ...  -->
+          <div class="form-group">
+            <label for="descripTTR">Description</label>
+            <input type="text" class="form-control" id="descripTTR"  placeholder="What I need to remember...">
+          </div>
+          <div class="form-group">
+            <label for="dueDateTTR">Due Date</label>
+            <input type="date" class="form-control" id="dueDateTTR" >
+          </div>
+          </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="submit" class="btn btn-info" value = "submit">Add to TTR</button> <!-- need to add ng-click-->
+      </div>
+    </div>
+  </div>
+  </div>
+
+  <!-- Edit Modal -->
+  <div class="modal" id="ttrEditModal" tabindex="-1" role="dialog" aria-labelledby="editTTR" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="editTTR">TTR</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <button type="button" class="btn btn-info">Add to Schedule</button> <!--ng-click -->
+        <button type="button" class="btn btn-warning">Edit</button><!--ng-click -->
+        <button type="button" class="btn btn-danger">Delete</button><!--ng-click -->
+      </div>
+    </div>
+  </div>
+  </div>
+
+  </div>
+</div>
