find to findOne

--- a/public/ttr.html
+++ b/public/ttr.html
@@ -65,7 +65,7 @@
       <div class="modal-body">
         <div class="form-group">
           <label for="editDescrip">Description</label>
-          <input type="text" class="form-control" id="editDescrip" ng-model="newDescrip" placeholder="{{model.ttr.description}}" >
+          <input type="text" class="form-control" id="editDescrip" ng-model="newDescrip" text="HI">
         </div>
         <div class="form-group">
           <label for="editDate">Due Date</label>
