--- a/public/ttr.html
+++ b/public/ttr.html
@@ -4,7 +4,7 @@
   <div id="ttrDiv">
     <button type="button" class="btn btn-danger ttrButton" ng-click="deleteSelectedTTR()">Delete</button>
     <button type="button" class="btn btn-info ttrButton">Add to Schedule</button>
-    <button type="button" class="button btn btn-primary ttrButton" data-toggle="modal" data-target="#ttrAddModal" >Add</button>
+    <button type="button" class="button btn btn-primary ttrButton" ng-click="addModal.openAdd()">Add</button>
     <table id = "ttrTable" class="table table-striped">
       <thead>
         <tr>
@@ -19,38 +19,40 @@
           <td>{{ ttr.dueDate | date:'MM/dd/yyyy'}}</td>
         </tr>
         </table>
-  <!-- Add Modal -->
-  <div class="modal" id="ttrAddModal" tabindex="-1" role="dialog" aria-labelledby="addTTR" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="addTTR">Add a TTR</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <form name = "AddTTR">
-          <div class="form-group">
-            <label for="descripTTR">Description</label>
-            <input type="text" class="form-control" id="descripTTR" ng-model="description" ng-value="" placeholder="What I need to remember...">
-          </div>
-          <div class="form-group">
-            <label for="dueDateTTR">Due Date</label>
-            <input type="date" class="form-control" id="dueDateTTR" ng-model="dueDate" ng-value="{{dueDate| date:'yyyy-MM-dd'}}">
-          </div>
-          </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="submit" class="btn btn-info" value = "submit" ng-click="addTTR()">Add to TTR</button>
-      </div>
-    </div>
-  </div>
-  </div>
-
   </div>
 </div>
+
+<!-- Add Modal -->
+<script type="text/ng-template" id="addModal.html">
+<div class="modal" id="ttrAddModal" tabindex="-1" role="dialog" aria-labelledby="addTTR" aria-hidden="true">
+<div class="modal-dialog">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h5 class="modal-title" id="addTTR">Add a TTR</h5>
+      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+      <form name = "AddTTR">
+        <div class="form-group">
+          <label for="descripTTR">Description</label>
+          <input type="text" class="form-control" id="descripTTR" ng-model="description" ng-value="" placeholder="What I need to remember...">
+        </div>
+        <div class="form-group">
+          <label for="dueDateTTR">Due Date</label>
+          <input type="date" class="form-control" id="dueDateTTR" ng-model="dueDate" ng-value="{{model.ttr.dueDate| date:'yyyy-MM-dd'}}">
+        </div>
+        </form>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      <button type="submit" class="btn btn-info" value = "submit" ng-click="$parent.addTTR()">Add to TTR</button>
+    </div>
+  </div>
+</div>
+</div>
+</script>
 
   <!-- Edit Modal -->
 <script type="text/ng-template" id="editModal.html">
