took out default date

--- a/public/ttr.html
+++ b/public/ttr.html
@@ -41,7 +41,7 @@
         </div>
         <div class="form-group">
           <label for="dueDateTTR">Due Date</label>
-          <input type="date" class="form-control" id="dueDateTTR" ng-model="dueDate" ng-value="{{model.ttr.dueDate| date:'yyyy-MM-dd'}}">
+          <input type="date" class="form-control" id="dueDateTTR" ng-model="dueDate">
         </div>
         </form>
     </div>
