--- a/public/logs.html
+++ b/public/logs.html
@@ -1,20 +1,39 @@
 <div ng-controller="LogCtrl">
 	<h1>LOGS</h1>
-	<div class="btn-group" role="group" aria-label="Basic example">
-		<button type="button" class="btn btn-outline-dark" data-toggle="button" aria-pressed="false" autocomplete="off">All</button>
-		<button type="button" class="btn btn-outline-success" data-toggle="button" aria-pressed="false" autocomplete="off">Complete</button>
-		<button type="button" class="btn btn-outline-danger" data-toggle="button" aria-pressed="false" autocomplete="off">Incomplete</button>
-	</div>
+	<!-- <div class="btn-group btn-group-toggle" data-toggle="buttons" role="group" aria-label="Basic example">
+	<button data-toggle = "button" ng-click = "myFilter = true || false" type="button" class="btn btn-outline-dark" data-toggle="button" aria-pressed="false" autocomplete="off">All</button>
+	<button data-toggle = "button" ng-click = "myFilter = {completed:true}" type="button" class="btn btn-outline-success" data-toggle="button" aria-pressed="false" autocomplete="off">Complete</button>
+	<button data-toggle = "button" ng-click = "myFilter = {completed:false}" type="button" class="btn btn-outline-danger" data-toggle="button" aria-pressed="false" autocomplete="off">Incomplete</button>
+</div> -->
 
-	<ul id="log_cards">
-		<div ng-repeat="log in logs" class="list-group">
-			<a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-				<div class="d-flex w-100 justify-content-between">
-					<small>Started: {{ log.startDate }} End: {{ log.endDate }} </small>
-				</div>
-				<p class="mb-1">{{ log.description }}</p>
-				<small>Completed: {{ log.completed }} </small>
-			</a>
+<div class="btn-group btn-group-toggle" data-toggle="buttons">
+	<label class="btn btn-outline-dark">
+		<input ng-click = "myFilter = true || false" type="radio" name="options" id="option1" autocomplete="off" checked> All
+	</label>
+	<label class="btn btn-outline-success">
+		<input ng-click = "myFilter = {completed:true}" type="radio" name="options" id="option2" autocomplete="off"> Complete
+	</label>
+	<label class="btn btn-outline-danger">
+		<input ng-click = "myFilter = {completed:false}" type="radio" name="options" id="option3" autocomplete="off"> Incomplete
+	</label>
+</div>
+
+<ul id="log_cards">
+	<div id="log_container" ng-repeat="log in logs | filter:myFilter" class="container content-area sample-show-hide">
+		<div class="row">
+			<div class="col-sm-6">
+				<h5 class="col-sm-12 mb-1">Description: {{ log.description }}</h5>
+				<small class="col-sm-12">Reason: {{ log.reason }}</small>
+			</div>
+			<div class="col-sm-6">
+				<small class="col-sm-12">Start Date: {{ log.startDate | date: MM-dd-yyyy }}</small>
+				<br>
+				<small class="cold-sm-12">End Date: {{ log.endDate | date: MM-dd-yyyy }}</small>
+				<br>
+				<small>Completed: {{ log.completed }}</small>
+			</div>
 		</div>
-	</ul>
+	</div>
+</ul>
+
 </div>
