fixed index.js typo, has date/time error in modal

--- a/public/schedule.html
+++ b/public/schedule.html
@@ -93,7 +93,7 @@
               <input type="text" class="form-control" id="reasonInput" ng-model="reason" placeholder="I (completed/did not complete) this because..." >
             </div>
           </form>
-          <button type="button" class="btn btn-warning" ng-click="$parent.addLog(model.schedule._id); $parent.deleteSchedule(model.schedule._id)">Edit</button>
+          <button type="button" class="btn btn-danger" ng-click="$parent.addLog(model.schedule._id); $parent.deleteSchedule(model.schedule._id)">Move</button>
         </div>
       </div>
     </div>
