--- a/public/ttr.html
+++ b/public/ttr.html
@@ -1,5 +1,6 @@
 <div ng-controller="TTRCntrl">
-  <edit-modal model="editModal" description="$parent.description" due-date="$parent.dueDate"></edit-modal>
+  <edit-modal model="editModal" end-date = "$parent.endDate" start-date="$parent.startDate"
+  notify-schedule="$parent.notifySchedule" description="$parent.description" due-date="$parent.dueDate"></edit-modal>
   <add-modal model="addModal" description="$parent.description" due-date="$parent.dueDate"></add-modal>
   <div id="ttrDiv">
     <button type="button" class="btn btn-danger ttrButton" ng-click="deleteSelectedTTR()">Delete</button>
@@ -69,23 +70,25 @@
           <div ng-show="!showSchedule" class="form-group">
             <label for="editDescrip">Description</label>
             <input type="text" class="form-control" id="editDescrip" ng-model="description" ng-value="model.data.description">
-          </div>
-          <div ng-show="!showSchedule" class="form-group">
             <label for="editDate">Due Date</label>
             <input type="date" class="form-control" id="editDate" ng-model="dueDate" ng-value="model.data.dueDate | date:'yyyy-MM-dd'">
           </div>
           <div ng-show="showSchedule" class="form-group">
-            <label for="editDescrip">Schedule!!</label>
-            <input type="text" class="form-control" id="editDescrip" ng-model="description" ng-value="model.data.description">
-          </div>
-          <div ng-show="showSchedule" class="form-group">
-            <label for="editDate">Start Date!!!</label>
-            <input type="date" class="form-control" id="editDate" ng-model="dueDate" ng-value="model.data.dueDate | date:'yyyy-MM-dd'">
+            <label for="scheduleDescription">Description</label>
+            <input type="text" class="form-control" id="scheduleDescription" ng-model="description" ng-value="model.data.description">
+            <label for="scheduleStartDate">Start Time</label>
+            <input type="datetime-local" class="form-control" id="scheduleStartDate" ng-model="startDate">
+            <label for="scheduleEndDate">End Date</label>
+            <input type="datetime-local" class="form-control" id="scheduleEndDate" ng-model="endDate">
+            <label for="scheduleNotification">Notify Me</label>
+            <input type="checkbox" id="scheduleNotification" ng-model="notifySchedule" ng-value="false" ng-init="notifySchedule=false">
           </div>
         </form>
-        <button type="button" class="btn btn-info" ng-click="showSchedule=true">Add to Schedule</button> <!--ng-click -->
-        <button type="button" class="btn btn-warning" ng-click="$parent.editTTR(model.data._id)">Edit</button>
-        <button type="button" class="btn btn-danger" ng-click="$parent.deleteTTR(model.data._id)">Delete</button>
+        <button ng-show="!showSchedule" type="button" class="btn btn-info" ng-click="showSchedule=true">Add to Schedule</button> <!--ng-click -->
+        <button ng-show="!showSchedule" type="button" class="btn btn-warning" ng-click="$parent.editTTR(model.data._id)">Edit</button>
+        <button ng-show="!showSchedule" type="button" class="btn btn-danger" ng-click="$parent.deleteTTR(model.data._id)">Delete</button>
+        <button ng-show="showSchedule" type="button" class="btn btn-warning" ng-click="showSchedule=false">Back</button>
+        <button ng-show="showSchedule" type="button" class="btn btn-info" ng-click="$parent.addTTRToSchedule()">Add</button>
       </div>
     </div>
   </div>
