Fixed small bug on ttr page for mobile responsiveness

--- a/public/ttr.html
+++ b/public/ttr.html
@@ -9,8 +9,8 @@
       <thead>
         <tr>
           <th></th>
-          <th scope="col">Description</th>
-          <th scope ="col">Due Date</th>
+          <th scope = "col">Description</th>
+          <th class="text-nowrap" scope = "col">Due Date</th>
         </tr>
       </thead>
         <tr ng-repeat="ttr in ttrs">
