--- a/public/schedule.html
+++ b/public/schedule.html
@@ -4,7 +4,7 @@
 
      <edit-modal-schedule model="editModalSchedule", description="$parent.description", start-date="$parent.startDate", end-date="$parent.endDate", reason="$parent.reason", notification="$parent.notification"></edit-modal-schedule>
      <move-to-log-modal model="moveToLogModal",  description="$parent.description" ,start-date="$parent.startDate", end-date="$parent.endDate", notification="$parent.notification"></move-to-log-modal>
-     <add-modal-schedule model="addModalSchedule",  description="$parent.description", start-date="$parent.startDate", end-date="$parent.endDate", reason="$parent.reason", notification="$parent.notification"></add-modal-schedule>
+     <add-modal-schedule model="addModalSchedule",  description="$parent.description", date="$parent.date", start-time="$parent.startTime", end-time="$parent.endTime", notification="$parent.notification"></add-modal-schedule>
 
     <button type="button" class="button btn btn-primary scheduleButton" ng-click='addModalSchedule.open()'>Add</button>
     <button type="button" class="btn btn-danger scheduleButton" ng-click='deleteSelectedSchedule()'>Delete</button> <!--ng-click -->
@@ -15,15 +15,17 @@
           <th></th>
           <th scope="col">Description</th>
           <th scope="col">Start Date</th>
-          <th scope="col">End Date</th>
+          <th scope="col">Start Time</th>
+          <th scope="col">End Time</th>
           <th scope="col">Mark as Complete</th>
         </tr>
       </thead>
       <tr ng-repeat="schedule in schedules">
           <td><input type="checkbox" value="scheduleCheck" ng-model="checkStatus" ng-init='checkStatus=false' ng-click="selectedSchedule(schedule._id, checkStatus)"></td>
-          <td ng-click="editModalSchedule.open(schedule)">{{ schedule.description }}</td> 
-          <td>{{ schedule.startDate | date:'MM/dd/yyyy' }}</td>
-          <td>{{ schedule.endDate | date:'MM/dd/yyyy' }}</td>
+          <td ng-click="editModalSchedule.open(schedule)">{{ schedule.description }}</td>
+          <td>{{ schedule.date | date:'MM/dd/yyyy' }}</td>
+          <td>{{ schedule.startTime | date:'hh:mm a' }}</td>
+          <td>{{ schedule.endTime | date:'hh:mm a'}}</td>
           <td ng-click="moveToLogModal.open(schedule)">
             <button ng-click="moveToLogModal.open(schedule)"> Click </button>
           </td>
@@ -51,11 +53,15 @@
           </div>
           <div class="form-group">
             <label for="startDateSchedule">Start Date</label>
-            <input type="date" class="form-control" id="startDateSchedule" ng-model='startDate'>
+            <input type="date" class="form-control" id="startDateSchedule" ng-model='date'>
           </div>
           <div class="form-group">
-            <label for="endDateSchedule">End Date</label>
-            <input type="date" class="form-control" id="endDateSchedule" ng-model='endDate'>
+            <label for="startTimeSchedule">Start Time</label>
+            <input type="time" class="form-control" id="startTimeSchedule" ng-model='startTime'>
+          </div>
+          <div class="form-group">
+            <label for="endTimeSchedule">End Time</label>
+            <input type="time" class="form-control" id="endTimeSchedule" ng-model='endTime'>
           </div>
           <div>
             <label for="notifications">Notify Me</label>
