--- a/public/schedule.html
+++ b/public/schedule.html
@@ -4,7 +4,7 @@
 
      <edit-modal-schedule model="editModalSchedule", description="$parent.description", start-date="$parent.startDate", end-date="$parent.endDate", reason="$parent.reason", notification="$parent.notification"></edit-modal-schedule>
      <move-to-log-modal model="moveToLogModal",  description="$parent.description" ,start-date="$parent.startDate", end-date="$parent.endDate", notification="$parent.notification"></move-to-log-modal>
-     <add-modal-schedule model="addModalSchedule",  description="$parent.description", date="$parent.date", start-time="$parent.startTime", end-time="$parent.endTime", notification="$parent.notification"></add-modal-schedule>
+     <add-modal-schedule model="addModalSchedule",  description="$parent.description", date="$parent.date", start-date="$parent.startDate", end-date="$parent.endDate", notification="$parent.notification"></add-modal-schedule>
 
     <button type="button" class="button btn btn-primary scheduleButton" ng-click='addModalSchedule.open()'>Add</button>
     <button type="button" class="btn btn-danger scheduleButton" ng-click='deleteSelectedSchedule()'>Delete</button> <!--ng-click -->
@@ -17,18 +17,14 @@
           <th scope="col">Start Date</th>
           <th scope="col">Start Time</th>
           <th scope="col">End Time</th>
-          <th scope="col">Mark as Complete</th>
         </tr>
       </thead>
       <tr ng-repeat="schedule in schedules">
           <td><input type="checkbox" value="scheduleCheck" ng-model="checkStatus" ng-init='checkStatus=false' ng-click="selectedSchedule(schedule._id, checkStatus)"></td>
           <td ng-click="editModalSchedule.open(schedule)">{{ schedule.description }}</td>
-          <td>{{ schedule.startTime | date:'MM/dd/yyyy' }}</td>
-          <td>{{ schedule.startTime | date:'hh:mm a' }}</td>
-          <td>{{ schedule.endTime | date:'hh:mm a'}}</td>
-          <td ng-click="moveToLogModal.open(schedule)">
-            <button ng-click="moveToLogModal.open(schedule)"> Click </button>
-          </td>
+          <td ng-click="editModalSchedule.open(schedule)">{{ schedule.startDate | date:'MM/dd/yyyy' }}</td>
+          <td ng-click="editModalSchedule.open(schedule)">{{ schedule.startDate | date:'hh:mm a' }}</td>
+          <td ng-click="editModalSchedule.open(schedule)">{{ schedule.endDate | date:'hh:mm a'}}</td>
       </tr>
     </table>
   </div>
@@ -57,11 +53,11 @@
           </div>
           <div class="form-group">
             <label for="startTimeSchedule">Start Time</label>
-            <input type="time" class="form-control" id="startTimeSchedule" ng-model='startTime'>
+            <input type="time" class="form-control" id="startTimeSchedule" ng-model='startDate'>
           </div>
           <div class="form-group">
             <label for="endTimeSchedule">End Time</label>
-            <input type="time" class="form-control" id="endTimeSchedule" ng-model='endTime'>
+            <input type="time" class="form-control" id="endTimeSchedule" ng-model='endDate'>
           </div>
           <div>
             <label for="notifications">Notify Me</label>
@@ -115,7 +111,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="editSchedule">Edit Schedule item</h5>
+        <h5 class="modal-title" id="editSchedule">Edit Schedule</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -126,7 +122,7 @@
               <input type="text" class="form-control" id="newDecrip" ng-value='model.schedule.description' ng-model="description">
           </div>
           <div class="form-group">
-              <label for="reason">Reason</label>
+              <label for="editStartDate">Start date</label>
               <input type="text" class="form-control" id="reason" ng-value='model.schedule.reason' ng-model="reason">
           </div>
           <div class="form-group">
