--- a/public/logs.html
+++ b/public/logs.html
@@ -1,4 +1,4 @@
-<div ng-controller="LogCtrl">
+<div id ="logsDiv" ng-controller="LogCtrl">
 	<div class="btn-group btn-group-toggle" data-toggle="buttons" role="group" aria-label="Basic example">
 	<button ng-click = "myFilter = {completed}" type="button" class="btn btn-outline-dark" data-toggle="button" aria-pressed="false" autocomplete="off">All</button>
 	<button ng-click = "myFilter = {completed:true}" type="button" class="btn btn-outline-success" data-toggle="button" aria-pressed="false" autocomplete="off">Complete</button>
